Basic CSS styles

--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <title>Color Tool</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <script defer src="./src/index.js"></script>
+    <script defer src="./src/scripts.js"></script>
 </head>
 <body>
-    <header>
+    <header class="container">
+        <h1>Color Tool</h1>
     </header>
-    <main>
+    <main class="container">
+
         <form>
-            <label></label>
-            <input>
-            <button></button>
+            <label>Have a RGB value?</label>
+            <input placeholder="Enter RGB Value">
+            <button>Submit</button>
+            <br />
+            <label>Have a HEX value?</label>
+            <input placeholder="Enter HEX Value">
+            <button>Submit</button>
+
         </form>
     </main>
     <footer>
