One swatch with separate color names

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </form>
         </div>
         <div id="color-swatch"></div>
+        <div id="gradient"></div>
+        <div id="text-example"></div>
 
     </main>
     <footer>
